# nonebot_plugin_game_collection

./: .gitignore  Account.py  Alchemy.py  Exceptions.py  Game.py  Manager.py  Market.py  Prop.py  README.md  __init__.py  api.py  avatar.py  config.py  data.py  data_source.py  element_library.json  events_main.py  horse.py  menu_data.json  props_library.json  pyproject.toml  race_group.py  setting.py  start.py  utils.py  新建文本文档.md
Fortress/: core.py
HorseRace/: events_main.py  horse.py  race_group.py  start.py
NewGame/: class.py
adapters/: v11.py
data/: api.py  data.py  run.py
events/horserace/: Stand.json  “日常，真的很日常”.json  克苏鲁.json  基础事件.json  复刻经典事件集合v1.json  崩坏集合v1.json  群友日常.json  芜湖事件合集.json  赫尔事件集v1.json  赫尔的赛马场事件簿.json
nonebot_plugin_game_collection/: Account.py  Game.py  Manager.py  Market.py  Processor.py  Prop.py  __init__.py  a.py  data.py
nonebot_plugin_game_collection/HorseRace/: race_group.py  start.py
nonebot_plugin_game_collection/adapters/: qq.py
nonebot_plugin_game_collection/horse_race/: horse.py
nonebot_plugin_game_collection/resource/: menu_data.json  props_library.json
nonebot_plugin_game_collection/resource/horserace/: Stand.json  “日常，真的很日常”.json  克苏鲁.json  基础事件.json  (+6 more)
nonebot_plugin_game_collection/utils/: utils.py
process/: ohlc.py
resource/: element_library.json  menu_data.json  props_library.json
resource/horserace/: Stand.json  基础事件.json  复刻经典事件集合v1.json  崩坏集合v1.json  群友日常.json  赫尔的赛马场事件簿.json
resource/subprocess/: ohlc.py
subprocess/: ohlc.py
tools/: create_prop.py  data_update.py  props_library.json  pt_test.py
tools/old_utils/: chart.py
utils/: avatar.py  chart.py  utils.py
(+1 files in other folders)
