[tool.poetry]
name = "nonebot-plugin-game-collection"
version = "3.0.5"
description = ""
authors = ["KarisAya <1048827424@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clovers = "^0.1.7"
clovers-leafgame = "^0.1.5.post1"
nonebot-plugin-clovers = {extras = ["nonebot"], version = "^0.1.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
