[project]
name = "nonebot-plugin-game-collection"
version = "4.0.0"
description = ""
authors = [{ name = "KarisAya", email = "1048827424@qq.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "nonebot2 (>=2.4.2,<3.0.0)",
    "nonebot-plugin-clovers (>=0.3.5,<0.4.0)",
    "clovers-sarof (>=0.1.0,<0.2.0)",
    "clovers-sarof-account (>=0.1.0,<0.2.0)",
    "clovers-sarof-gacha (>=0.1.0,<0.2.0)",
    "clovers-sarof-game-collection (>=0.1.0,<0.2.0)",
    "clovers-sarof-market (>=0.1.0,<0.2.0)",
    "clovers-sarof-ranklist (>=0.1.0,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
